--- a/src/Views/Desktop/Desktop.module.css
+++ b/src/Views/Desktop/Desktop.module.css
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
   width: 100vw;
-  background-image: var(--bg-image);
+  background-image: url(../../assets/Wallpapers/default_light.jpg);
   background-size: cover;
 }
