--- a/src/Views/Desktop/Desktop.module.css
+++ b/src/Views/Desktop/Desktop.module.css
@@ -1,6 +1,9 @@
 .container {
   height: 100vh;
   width: 100vw;
-  background-image: url(../../assets/Wallpapers/default_light.jpg);
+  background-image: var(--bg-image);
   background-size: cover;
+  transition: 0.2s background-image ease;
+  position: relative;
+  overflow: hidden;
 }
