--- a/src/Views/Desktop/Desktop.module.css
+++ b/src/Views/Desktop/Desktop.module.css
@@ -1,9 +1,12 @@
 .container {
   height: 100vh;
   width: 100vw;
-  background-image: var(--bg-image);
+  background-image: url(../../assets/Wallpapers/default_light.jpg);
   background-size: cover;
   transition: 0.2s background-image ease;
   position: relative;
   overflow: hidden;
+}
+[data-theme="dark"] .container {
+  background-image: url(../../assets/Wallpapers/default_dark.jpg);
 }
