--- a/src/Components/WindowArea/Window/Window.module.css
+++ b/src/Components/WindowArea/Window/Window.module.css
@@ -11,8 +11,7 @@
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
     0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
     0 100px 80px rgba(0, 0, 0, 0.07);
-  transition: 0.2s background ease;
-  transition: 0.2s color ease;
+  transition: 0.2s background, 0.2s color;
   color: black;
   animation: 0.3s Pop ease;
 }
