--- a/src/Components/ContextMenu/Contextmenu.module.css
+++ b/src/Components/ContextMenu/Contextmenu.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   background: rgb(255, 255, 255);
-  backdrop-filter: blur(20.5px);
-  -webkit-backdrop-filter: blur(20.5px);
+  /* backdrop-filter: blur(20.5px);
+  -webkit-backdrop-filter: blur(20.5px); */
   color: #000;
   position: absolute;
   top: 30%;
@@ -11,18 +11,18 @@
   border-radius: 8px;
   padding-top: 5px;
   padding-bottom: 5px;
-  min-width: 200px;
+  min-width: 240px;
 
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.031),
     0 6.7px 5.3px rgba(0, 0, 0, 0.044), 0 12.5px 10px rgba(0, 0, 0, 0.055),
     0 22.3px 17.9px rgba(0, 0, 0, 0.066), 0 41.8px 33.4px rgba(0, 0, 0, 0.079),
     0 100px 80px rgba(0, 0, 0, 0.11);
-  animation: pop 0.2s ease-in-out;
+  animation: pop 0.2s ease;
   transform-origin: top left;
 }
 
 [data-theme="dark"] .context_menu {
-  background: rgba(3, 21, 41, 0.493);
+  background: rgb(44, 44, 44);
   color: #fff;
 }
 @keyframes pop {
@@ -30,7 +30,7 @@
     transform: scale(0);
   }
   90% {
-    transform: scale(1.05);
+    transform: scale(1.02);
   }
   to {
     transform: scale(1);
@@ -38,28 +38,42 @@
 }
 
 .context_item {
-  padding: 4px 8px;
+  padding: 5px 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+
   font-size: 13px;
   margin: 2px;
   cursor: pointer;
   transition: 0.1s all ease-in;
-  border-radius: 6px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.context_item.disabled {
+  cursor: context-menu;
+  opacity: 0.5;
 }
 
-.context_item:hover {
+.context_item p {
+  margin-left: 13px;
+  font-weight: 500;
+}
+.context_item:not(.disabled):hover {
   background-color: rgb(233, 233, 233);
 }
-[data-theme="dark"] .context_item:hover {
-  background-color: rgba(3, 21, 41, 0.603);
+[data-theme="dark"] .context_item:not(.disabled):hover {
+  background-color: rgb(73, 73, 73);
 }
 
-.context_item:active {
+.context_item:not(.disabled):active {
   transform: scale(0.95);
 }
 .context_divider {
   width: 100%;
   height: 1px;
-  background-color: rgba(167, 167, 167, 0.562);
+  background-color: rgba(197, 197, 197, 0.178);
   margin-top: 2px;
   margin-bottom: 2px;
 }
