--- a/src/Components/WindowArea/Window/Window.module.css
+++ b/src/Components/WindowArea/Window/Window.module.css
@@ -7,8 +7,10 @@
   transition: 0.2s background ease;
   transition: 0.2s border ease;
   border-radius: 6px;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02), 0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    0 100px 80px rgba(0, 0, 0, 0.07);
   transition: 0.2s background, 0.2s color;
   color: black;
   animation: 0.3s Pop;
@@ -24,7 +26,7 @@
   }
 }
 
-[data-theme='dark'] .container {
+[data-theme="dark"] .container {
   background: rgba(3, 21, 41, 0.774);
   color: #fff;
 }
@@ -67,4 +69,18 @@
   font-weight: lighter;
   letter-spacing: 0.5px;
   margin-left: 5px;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100% - 32px);
+}
+.content h4 {
+  font-size: 20px;
+  font-weight: 400;
+}
+.content_image {
+  width: clamp(40px, 40%, 200px);
 }
