--- a/src/Components/Taskbar/taskbar.module.css
+++ b/src/Components/Taskbar/taskbar.module.css
@@ -13,12 +13,22 @@
   align-items: center;
   justify-content: center;
   transition: 0.2s all ease;
+  min-height: 50px;
 }
 
+.inner_container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 [data-theme="dark"] .container {
   background: rgba(3, 21, 41, 0.35);
 }
 .icons {
   display: flex;
   margin-left: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
