:children_crossing: added: click to open settings app

--- a/src/Components/Taskbar/ActionCenter/NotificationPanel/NotificationPanel.module.css
+++ b/src/Components/Taskbar/ActionCenter/NotificationPanel/NotificationPanel.module.css
@@ -59,6 +59,9 @@
   justify-content: space-evenly;
   min-width: 20%;
 }
+.other_icons div {
+  cursor: pointer;
+}
 
 @keyframes slideUp {
   from {
